--- a/admin/index.html
+++ b/admin/index.html
@@ -8,14 +8,28 @@
   </head>
   <body>
     <section id="log"></section>
+    <section id="addMovie"></section>
 
     <script type="module">
+      import {MovieForm} from './component/MovieForm/script.js';
+      import {DataMovie} from './data/dataMovie.js';
+
       import { Log } from "./component/Log/script.js";
 
       window.C = {};
 
+      C.handlerUpdate = async function(){
+            let form = document.querySelector('.addMovie__form');
+            let fd = new FormData(form);
+           
+            let res = await DataMovie.add(fd);
+            
+            V.renderLog(res);
+        }
+
       C.start = function () {
         V.renderLog("Démarrage de l'application");
+        V.renderMovie("C.handlerUpdate");
       };
 
       window.V = {};
@@ -23,6 +37,11 @@
       V.renderLog = function (txt) {
         let content = document.querySelector("#log");
         content.innerHTML = Log.format(txt);
+      };
+
+      V.renderMovie = function (handler) {
+        let content = document.querySelector("#addMovie");
+        content.innerHTML = MovieForm.format(handler);
       };
 
       C.start();
