--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,14 @@
   <body>
     <header id="header"></header>
 
-    <section id="content"></section>
+    <section class="cards" id="content"></section>
 
     <script type="module">
       import { NavBar } from "./component/NavBar/script.js";
+      import { Movie } from "./component/Movie/script.js";
 
+
+      import { DataMovie } from "./data/dataMovie.js";
       // Controleur
       // Rappel, écrire window.C plutôt que let C est nécessaire pour tester depuis la console du navigateur
       // Une fois l'application terminée, on pourrait remettre let C.
@@ -28,7 +31,17 @@
 
       C.start = function () {
         V.renderNavBar("C.handlerAbout()");
+        C.getMovie();
       };
+
+        /* C.getMovie
+        La fonction affiche sur la page la collection de films par défaut
+      */
+      C.getMovie = async function () {
+        let data = await DataMovie.requestMovies(); // On récupère les données par défaut et on attend avec await
+        V.renderMovie(data); // Affiche les données
+      };
+
 
       // Vue (contient tout ce qui est relatif à l'affichage)
       window.V = {};
@@ -43,6 +56,18 @@
       V.renderNavBar = function (hAbout) {
         let header = document.querySelector("#header");
         header.innerHTML = NavBar.format(hAbout);
+      };
+
+       /**
+       * V.renderMovie
+       *
+       * Cette fonction est responsable de l'affichage de la liste des films.
+       * Elle sélectionne l'élément HTML avec l'ID "content" et y insère le contenu
+       * formaté par le composant Movie.
+       */
+       V.renderMovie = function (data) {
+        let content = document.querySelector("#content");
+        content.innerHTML = Movie.format(data);
       };
 
       C.start(); // Démarre l'application
