--- a/admin/index.html
+++ b/admin/index.html
@@ -29,7 +29,7 @@
 
       C.start = function () {
         V.renderLog("Démarrage de l'application");
-        V.renderMovie("C.handlerUpdate");
+        V.renderMovie("C.handlerUpdate()");
       };
 
       window.V = {};
