--- a/app/index.html
+++ b/app/index.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <title>SAE2.03 APP</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/base.css" />
-  </head>
-
-  <body>
-    <header id="header"></header>
-
-    <section class="detail" id="detail"></section>
-    <section class="cards" id="content"></section>
-
-
-    <script type="module">
-      import { NavBar } from "./component/NavBar/script.js";
-      import { Movie } from "./component/Movie/script.js";
-      import { Moviedetail } from "./component/MovieDetail/script.js";
-
-      import { DataMovie } from "./data/dataMovie.js";
-      // Controleur
-      // Rappel, écrire window.C plutôt que let C est nécessaire pour tester depuis la console du navigateur
-      // Une fois l'application terminée, on pourrait remettre let C.
-      window.C = {};
-
-      C.handlerAbout = function () {
-        C.getMovie();
-      };
-
-      C.start = function () {
-        V.renderNavBar("C.handlerAbout()");
-        C.getMovie();
-      };
-
-        /* C.getMovie
-        La fonction affiche sur la page la collection de films par défaut
-      */
-      C.getMovie = async function () {
-
-        let detail = document.querySelector("#detail");
-        detail.innerHTML = ""; 
-        let data = await DataMovie.requestMovies(); // On récupère les données par défaut et on attend avec await
-        V.renderMovie(data); // Affiche les données
-      };
-
-      C.handlerDetail = async function (id) {
-        let data = await DataMovie.requestMovieDetails(id); // On récupère les données par défaut et on attend avec await
-        V.renderDetail(data); // Affiche les données
-        
-      };
-
-
-      // Vue (contient tout ce qui est relatif à l'affichage)
-      window.V = {};
-
-      /**
-       * V.renderNavBar
-       *
-       * Cette fonction est responsable de l'affichage de la barre de navigation (NavBar).
-       * Elle sélectionne l'élément HTML avec l'ID "header" et y insère le contenu
-       * formaté par le composant NavBar.
-       */
-      V.renderNavBar = function (hAbout) {
-        let header = document.querySelector("#header");
-        header.innerHTML = NavBar.format(hAbout);
-      };
-
-       /**
-       * V.renderMovie
-       *
-       * Cette fonction est responsable de l'affichage de la liste des films.
-       * Elle sélectionne l'élément HTML avec l'ID "content" et y insère le contenu
-       * formaté par le composant Movie.
-       */
-       V.renderMovie = function (data) {
-        let content = document.querySelector("#content");
-        content.innerHTML = Movie.format(data);
-      };
-
-      V.renderDetail = function (data) {
-        let content = document.querySelector("#detail");
-        content.innerHTML = Moviedetail.format(data);
-      };
-
-      C.start(); // Démarre l'application
-    </script>
-  </body>
-</html>
-<script type="module"></script>
+caca
