--- a/admin/index.html
+++ b/admin/index.html
@@ -9,6 +9,7 @@
   <body>
     <section id="log"></section>
     <section id="addMovie"></section>
+    <section id="addProfile"></section>
 
     <script type="module">
       import {MovieForm} from './component/MovieForm/script.js';
@@ -21,19 +22,28 @@
 
       window.C = {};
 
-      C.handlerUpdate = async function(){
-            let form = document.querySelector('.addMovie__form');
-            let fd = new FormData(form);
-           
-            let res = await DataMovie.add(fd);
-            
-            V.renderLog(res);
-        }
+      C.handlerProfile = async function() {
+  let form = document.querySelector('.addProfile__form');
+  
+  // Validation des champs
+  if (!form.nom.value || !form.image.value || !form.date_naissance.value) {
+    alert("Tous les champs doivent être remplis !");
+    return;
+  }
+
+  // Si tous les champs sont remplis, on peut envoyer les données
+  let fd = new FormData(form);
+  let res = await DataProfile.add(fd);
+  
+  // Affichage du résultat dans le log
+  V.renderLog(res);
+};
+
 
       C.start = function () {
         V.renderLog("Démarrage de l'application");
         V.renderMovie("C.handlerUpdate()");
-        V.renderProfile("C.handlerUpdate()");
+        V.renderProfile("C.handlerProfile()");
       };
 
       window.V = {};
