--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
       import { MovieCategory } from "./component/MovieCategory/script.js";
 
       import { DataMovie } from "./data/dataMovie.js";
+      import { DataProfile } from "./data/dataProfile.js";
       // Controleur
       // Rappel, écrire window.C plutôt que let C est nécessaire pour tester depuis la console du navigateur
       // Une fois l'application terminée, on pourrait remettre let C.
@@ -42,7 +43,6 @@
         La fonction affiche sur la page la collection de films par défaut
       */
       C.getMovie = async function () {
-
         let detail = document.querySelector("#detail");
         detail.innerHTML = ""; 
         let data = await DataMovie.requestMovies(); // On récupère les données par défaut et on attend avec await
@@ -59,6 +59,11 @@
         let data = await DataMovie.requestMoviecategorie(categorie);
         V.renderMovie(data);
       };
+
+      C.handlerProfile = async function () {
+        const select = document.querySelector("#profile-select");
+        const selectedOption = select.selectedOptions[0];
+      }
 
 
       // Vue (contient tout ce qui est relatif à l'affichage)
