--- a/admin/index.html
+++ b/admin/index.html
@@ -10,12 +10,14 @@
     <section id="log"></section>
     <section id="addMovie"></section>
     <section id="addProfile"></section>
+    <section id="updateProfile"></section>
 
     <script type="module">
       import {MovieForm} from './component/MovieForm/script.js';
       import {DataMovie} from './data/dataMovie.js';
 
       import {ProfileForm} from './component/ProfileForm/script.js';
+      import {ProfileModifyForm} from './component/ProfileModifyForm/script.js';
       import {DataProfile} from './data/dataProfile.js';
 
       import { Log } from "./component/Log/script.js";
@@ -33,26 +35,53 @@
 
       C.handlerProfile = async function() {
       let form = document.querySelector('.addProfile__form');
-  
       // Validation des champs
       if (!form.nom.value || !form.image.value || !form.date_naissance.value) {
       alert("Tous les champs doivent être remplis !");
       return;
       }
-
       // Si tous les champs sont remplis, on peut envoyer les données
       let fd = new FormData(form);
       let res = await DataProfile.add(fd);
-  
       // Affichage du résultat dans le log
       V.renderLog(res);
     };
 
 
+    C.handlerProfilemodify = async function() {
+      let form = document.querySelector('.updateProfile__form');
+      // Validation des champs
+      if (!form.nom.value || !form.image.value || !form.date_naissance.value || !form.id.value) {
+      alert("Tous les champs doivent être remplis !");
+      return;
+      }
+      // Si tous les champs sont remplis, on peut envoyer les données
+      let fd = new FormData(form);
+      let res = await DataProfile.update(fd);
+      // Affichage du résultat dans le log
+      V.renderLog(res);
+    };
+
+//     C.loadProfiles = async function() {
+//   let profiles = await DataProfile.getProfiles();
+//   // Générer les options
+//   let optionsHtml = profiles.map(profile => {
+//     return `<option value="${profile.id}">${profile.nom}</option>`;
+//   }).join('');
+  
+//   // Injecter dans le <select>
+//   let select = document.querySelector('#profile-select');
+//   if (select) {
+//     select.innerHTML = optionsHtml;
+//   }
+// };
+
       C.start = function () {
         V.renderLog("Démarrage de l'application");
         V.renderMovie("C.handlerUpdate()");
         V.renderProfile("C.handlerProfile()");
+        V.renderProfileModify("C.handlerProfilemodify()");
+        // C.loadProfiles();
       };
 
       window.V = {};
@@ -70,6 +99,11 @@
       V.renderProfile = function (handler) {
         let content = document.querySelector("#addProfile");
         content.innerHTML = ProfileForm.format(handler);
+      };
+
+      V.renderProfileModify = function(handler) {
+      let content = document.querySelector("#updateProfile");
+      content.innerHTML = ProfileModifyForm.format(handler);  
       };
 
       C.start();
