--- a/admin/index.html
+++ b/admin/index.html
@@ -50,11 +50,6 @@
 
     C.handlerProfilemodify = async function() {
       let form = document.querySelector('.updateProfile__form');
-      // Validation des champs
-      if (!form.nom.value || !form.image.value || !form.date_naissance.value || !form.id.value) {
-      alert("Tous les champs doivent être remplis !");
-      return;
-      }
       // Si tous les champs sont remplis, on peut envoyer les données
       let fd = new FormData(form);
       let res = await DataProfile.update(fd);
@@ -62,26 +57,27 @@
       V.renderLog(res);
     };
 
-//     C.loadProfiles = async function() {
-//   let profiles = await DataProfile.getProfiles();
-//   // Générer les options
-//   let optionsHtml = profiles.map(profile => {
-//     return `<option value="${profile.id}">${profile.nom}</option>`;
-//   }).join('');
-  
-//   // Injecter dans le <select>
-//   let select = document.querySelector('#profile-select');
-//   if (select) {
-//     select.innerHTML = optionsHtml;
-//   }
-// };
+
+    C.loadProfiles = async function() {
+      let profiles = await DataProfile.readProfile();
+      let optionsHtml = "";
+      for (let i = 0; i < profiles.length; i++) {
+        let profile = profiles[i];
+        optionsHtml += `<option value="${profile.id}">${profile.nom}</option>`;
+      }
+      let select = document.querySelector('#profile-select');
+      if (select) {
+        select.innerHTML = optionsHtml;
+      }
+    };
+
 
       C.start = function () {
         V.renderLog("Démarrage de l'application");
         V.renderMovie("C.handlerUpdate()");
         V.renderProfile("C.handlerProfile()");
         V.renderProfileModify("C.handlerProfilemodify()");
-        // C.loadProfiles();
+        C.loadProfiles();
       };
 
       window.V = {};
