--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <div class="sae__list__itemax">
                 <h3 class="sae__list__title">Itération max</h3>
                 <li class="sae__liname">
-                    <a class="sae__btn" href="../SAE2.03-iteration-max/admin/index.html">admin</a>
+                    <a class="sae__btn" href="../SAE2.03-PRADEAU/SAE2.03-iteration-max/admin/">admin</a>
                 </li>
                 <li class="sae__liname">
-                    <a class="sae__btn" href="../SAE2.03-iteration-max/app/index.html">app</a>
+                    <a class="sae__btn" href="../SAE2.03-PRADEAU/SAE2.03-iteration-max/app/index.html">app</a>
                 </li>
             </div>
             <div class="sae__list__itesurprise">
                 <h3 class="sae__list__title">Itération surprise</h3>
                 <li class="sae__liname">
-                    <a class="sae__btn" href="../SAE2.03-iteration-surprise/admin/index.html">admin</a>
+                    <a class="sae__btn" href="../SAE2.03-PRADEAU/SAE2.03-iteration-surprise/admin/index.html">admin</a>
                 </li>
                 <li class="sae__liname">
-                    <a class="sae__btn" href="../SAE2.03-iteration-surprise/app/index.html">app</a>
+                    <a class="sae__btn" href="../SAE2.03-PRADEAU/SAE2.03-iteration-surprise/app/index.html">app</a>
                 </li>
             </div>
         </ul>
